# boxlite

./: .gitmodules  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/workflows/: build-node.yml  lint.yml  test.yml
boxlite/: Cargo.toml  build.rs
boxlite-cli/: Cargo.toml
boxlite-cli/src/: cli.rs  config.rs  main.rs
boxlite-cli/src/commands/: mod.rs  run.rs
boxlite-cli/tests/: completion.rs  registry.rs
boxlite-shared/proto/boxlite/v1/: service.proto
boxlite-shared/src/: errors.rs
boxlite/src/: lib.rs
boxlite/src/controller/: shim.rs
boxlite/src/db/: boxes.rs  images.rs  mod.rs  schema.rs
boxlite/src/images/: manager.rs  mod.rs  storage.rs  store.rs
boxlite/src/jailer/: config.rs  mod.rs  seccomp.rs
boxlite/src/jailer/platform/: mod.rs
boxlite/src/jailer/platform/linux/: mod.rs
boxlite/src/jailer/platform/macos/: mod.rs
boxlite/src/litebox/: box_impl.rs  exec.rs  lifecycle.rs  manager.rs  mod.rs  state.rs
boxlite/src/litebox/init/: mod.rs  pipeline.rs  types.rs
boxlite/src/litebox/init/stages/: config.rs  guest.rs  guest_rootfs.rs  init_image.rs  mod.rs  rootfs.rs
boxlite/src/litebox/init/tasks/: container_rootfs.rs  vmm_spawn.rs
boxlite/src/lock/: mod.rs
boxlite/src/metrics/: box_metrics.rs
boxlite/src/portal/interfaces/: container.rs  exec.rs  guest.rs
boxlite/src/rootfs/: mod.rs
boxlite/src/runtime/: constants.rs  core.rs  guest_rootfs.rs  initrf.rs  layout.rs  mod.rs  options.rs  rt_impl.rs  types.rs
boxlite/src/util/: mod.rs
boxlite/src/vmm/: mod.rs
boxlite/src/vmm/controller/: shim.rs  spawn.rs
boxlite/src/vmm/krun/: context.rs  engine.rs
boxlite/src/volumes/: block_device.rs  disk.rs  ext4.rs  mod.rs  qcow2.rs
boxlite/tests/: README.md  execution_shutdown.rs  lifecycle.rs
docs/development/: rust-style.md
docs/guides/: image-registry-configuration.md
docs/reference/: README.md
docs/reference/c/: README.md
docs/reference/nodejs/: README.md
docs/reference/python/: README.md
docs/reference/rust/: README.md
examples/c/: execute.c
examples/node/: browserbox.js  claude_in_boxlite.js  codebox.js  computerbox.js  cp_tmpfs_workaround.js  interactivebox.js  package.json  simplebox.js
examples/python/: cmd_user_example.py  computerbox_example.py  cp_tmpfs_workaround_example.py  cross_process_example.py  detach_example.py  lifecycle_example.py  list_boxes_example.py  llm_driven_simplebox_example.py  native_example.py  port_forward_example.py  sync_cp_tmpfs_workaround_example.py
guest/src/container/: command.rs  lifecycle.rs  spec.rs  start.rs
guest/src/service/: container.rs  guest.rs
guest/src/service/exec/: executor.rs  mod.rs  state.rs
scripts/: common.sh
scripts/images/: create-oci-bundle.sh
sdks/boxlite-ffi/: Cargo.toml
sdks/boxlite-ffi/src/: ops.rs
sdks/c/: Cargo.toml  build.rs  cbindgen.toml
sdks/c/include/: boxlite.h
sdks/c/src/: ffi.rs
sdks/c/tests/: CMakeLists.txt
sdks/ffi/: Cargo.toml
sdks/ffi/src/: json.rs  ops.rs  string.rs
sdks/go/: Makefile  README.md  go.mod
sdks/go/internal/binding/: binding.go
sdks/go/pkg/client/: box.go  client.go  client_test.go  errors.go  types.go
sdks/go/rust/: Cargo.toml
sdks/go/rust/src/: lib.rs
sdks/node/: package.json  tsconfig.json  vitest.config.ts
sdks/node/lib/: index.ts  native.ts  simplebox.ts
sdks/node/src/: box_handle.rs  exec.rs  options.rs  runtime.rs
sdks/node/tests/: constants.test.ts  errors.test.ts  exec.test.ts  options.test.ts
sdks/python/: pyproject.toml
sdks/python/boxlite/: computerbox.py  exec.py  interactivebox.py  simplebox.py
sdks/python/boxlite/sync_api/: _box.py  _boxlite.py  _execution.py  _simplebox.py
sdks/python/src/: box_handle.rs  exec.rs  info.rs  metrics.rs  options.rs  runtime.rs
sdks/python/tests/: test_box_management.py  test_options.py  test_simplebox.py
