[package]
name = "boxlite-c"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "C SDK for Boxlite runtime"

[lib]
name = "boxlite"
crate-type = ["cdylib", "staticlib"]

[features]
default = []
gvproxy-backend = ["boxlite-ffi/gvproxy-backend"]
libslirp-backend = ["boxlite-ffi/libslirp-backend"]

[dependencies]
boxlite-ffi = { path = "../boxlite-ffi" }

[build-dependencies]
cbindgen = "0.29"