[package]
name = "boxlite-go-bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
# Internal dependencies
boxlite = { path = "../../../boxlite" }
boxlite-shared = { path = "../../../boxlite-shared" }

# Async runtime - must include "full" for multi-threaded scheduling
tokio = { version = "1", features = ["full"] }

# Error handling and logging
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

# Serialization (for passing JSON via FFI)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# FFI helpers
libc = "0.2"
once_cell = "1"

